--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-
+<div class="container" id="container">
+    <h1>Diamond Sweeper</h1>
+    <div class="row">
+        <div class="col-xs-12" id="diamondSweeper">
+        </div>
+    </div>
+</div>
 
